--- a/landing_page.html
+++ b/landing_page.html
@@ -454,7 +454,7 @@
         
       </div>
       <div class="nav-items">
-        <a href="#" class="nav-link">Sign In</a>
+        <a href="Login.html" class="nav-link">Sign In</a>
         <button class="btn">Get Started</button>
       </div>
     </nav>
