--- a/Frontend/Login.html
+++ b/Frontend/Login.html
@@ -28,7 +28,7 @@
 		</div>
 		<div class="input-group">
 			<label for="password">Password</label>
-			<input type="password" name="password" id="password" placeholder="">
+			<input type="password" name="password" id="password" placeholder="8 characters long">
 			<div class="forgot">
 				<a rel="noopener noreferrer" href="#">Forgot Password ?</a>
 			</div>
@@ -58,7 +58,7 @@
 		</button>
 	</div>
 	<p class="signup">Don't have an account?
-		<a rel="noopener noreferrer" href="#" class="">Sign up</a>
+		<a rel="noopener noreferrer" href="Sign_up.html" class="">Sign up</a>
 	</p>
 </div>
 		</body>
