--- a/Frontend/landing_page.html
+++ b/Frontend/landing_page.html
@@ -455,7 +455,7 @@
       </div>
       <div class="nav-items">
         <a href="Login.html" class="nav-link">Sign In</a>
-        <button class="btn">Get Started</button>
+        <a href="Sign_up.html"><button class="btn">Get Started</button></a>
       </div>
     </nav>
   </header>
