feat: Implement new dark theme design

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       <div id="index-page" class="page active">
         <div class="hero-section">
           <div class="hero-content">
-            <h1 class="hero-title">Your AI Programming Assistant</h1>
-            <p class="hero-subtitle">Get instant help with coding, debugging, and learning new technologies</p>
+            <h1 class="hero-title">Code Together, Build Better</h1>
+            <p class="hero-subtitle">A collaborative platform for developers to share, discuss, and iterate on code in real time</p>
             <div class="hero-buttons">
-              <button class="btn btn-primary btn-large" data-page="chat">Start Chatting</button>
-              <button class="btn btn-secondary btn-large" data-page="signup">Get Started</button>
+              <button class="btn btn-primary btn-large" data-page="chat">Start Collaborating</button>
+              <button class="btn btn-secondary btn-large">Learn More</button>
             </div>
           </div>
           <div class="hero-image">
@@ -61,7 +61,7 @@
         </div>
         
         <div class="features-section">
-          <h2>Why Choose DevChat?</h2>
+          <h2>Everything you need to collaborate</h2>
           <div class="features-grid">
             <div class="feature-card">
               <i class="fas fa-bolt"></i>
